<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerSetup">

    <TextView
        android:id="@+id/playerSetup_GameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/p1n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/p1n"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toTopOf="@+id/p2n"
        app:layout_constraintEnd_toStartOf="@+id/custP1marker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerSetup_GameTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/p1n_Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/p1nInputPlaceholder" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/custP1marker"
        android:onClick="customizeMarker"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="25dp"
        android:text="@string/custMarkButton"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/custP2marker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/p1n"
        app:layout_constraintTop_toBottomOf="@+id/playerSetup_GameTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/p2n"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toTopOf="@+id/startGameButton"
        app:layout_constraintEnd_toStartOf="@+id/custP2marker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p1n">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/p2n_Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/p2nInputPlaceholder" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/custP2marker"
        android:onClick="customizeMarker"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="25dp"
        android:text="@string/custMarkButton"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/startGameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/p2n"
        app:layout_constraintTop_toBottomOf="@+id/custP1marker"
        app:layout_constraintVertical_bias="0.667" />

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:onClick="startGame"
        android:text="@string/startGameButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p2n" />

</androidx.constraintlayout.widget.ConstraintLayout>